Few more bug fixes

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -199,7 +199,7 @@ body {
         width: 20px;
         height: 20px;
         margin: 0 auto;
-        fill: @textColorBlack;
+        fill: @textColorWhite;
     }
 }
 
@@ -276,7 +276,7 @@ body {
     height: 179px;
     line-height: 1;
 
-    &:not(.leaderboardbox):not(.box-style-form):hover {
+    &:not(.leaderboardbox):not(.box-style-form):not(.active):hover {
         background: #f0f0f0;
 
         .wrapper {
