--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/angularMaterialOverride.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/angularMaterialOverride.css
@@ -52,7 +52,7 @@ md-dialog-actions {
 md-select .md-select-value,
 md-input-container .md-input,
 .form-group.form-md-line-input .form-control {
-  color: #4190b9;
+  color: #212325;
   border-color: #4190b9;
 }
 md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused .md-input,
