--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/angularMaterialOverride.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/angularMaterialOverride.less
@@ -70,7 +70,7 @@ md-dialog-actions {
 md-select .md-select-value,
 md-input-container .md-input,
 .form-group.form-md-line-input .form-control {
-    color: @buttonColorBlue;
+    color: @textColorBlack;
     border-color: @buttonColorBlue;
 
 }
