--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -60,7 +60,7 @@
         svg {
             width: 30px;
             height: 30px;
-            fill: @svgQuizArrows;
+            fill: @textColorGrey;
         }
 
         &.prev {
