--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
@@ -385,7 +385,7 @@
         }
 
         .ng-dirty.ng-invalid {
-            background: @backgroundColorBlack;
+            background: @textColorWhite;
         }
 
         md-radio-button {
