--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -591,6 +591,9 @@ md-icon {
   right: 10px;
   top: -5px;
 }
+.md-button {
+  text-transform: none;
+}
 md-menu-content {
   padding: 0;
   border-radius: 5px;
