--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
@@ -370,7 +370,7 @@
     @Html.JqueryValidateLocale()
 
     <script defer type="text/template" id="box-template">
-        <a href="{boxUrl}" class="box" ga-track-event="['home-page', 'box']">
+        <a href="{boxUrl}" class="box box-style" ga-track-event="['home-page', 'box']">
             <h2 class="{boxClass}">{boxName}</h2>
             <div class="course-info">
                 <div class="lecturer">{boxProfessor}</div>
