--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -160,8 +160,8 @@
                         </div>
                         <div class="reply-actions" layout="row" layout-align="space-between center">
                             <div class="upload-options feed-upload" layout="row" layout-wrap layout-align="space-between start">
-                                <a user-not-register-popup="click" plupload="f.add.fileUpload.url" ng-click="f.add.upload(post.id)"
-                                   plupload-options="f.add.fileUpload.options" plupload-callbacks="f.add.fileUpload.callbacks" ga-track-event="['box-feed', 'addFile']">
+                                <a user-not-register-popup="click" plupload="f.add.fileUpload.url" @*ng-click="f.add.upload(post.id)"*@
+                                   plupload-options="f.add.fileUpload.options(post.id)" plupload-callbacks="f.add.fileUpload.callbacks" ga-track-event="['box-feed', 'addFile']">
                                     <md-icon md-svg-icon="u:file" class="file"></md-icon>
                                     @*@Html.Svg(url, "file", new {@class = "file"})*@
                                 </a>
