--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.css
@@ -86,7 +86,7 @@
   margin-top: calc(100% - 20px);
   position: initial !important;
   background: #3293F6;
-  color: #212325;
+  color: #ffffff;
 }
 .accountPage-wrapper .portlet.light > .portlet-title {
   border-bottom: 1px solid #F4F4F4;
