--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
@@ -96,7 +96,7 @@
         margin-top: ~"calc(100% - 20px)";
         position: initial !important;
         background: @backgroundColorSpitballBlue;
-        color: @textColorBlack;
+        color: @textColorWhite;
     }
 
     .portlet.light {
