--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -351,7 +351,7 @@ md-menu-item {
         height: 50px;
         border-radius: 0 10px 10px 0;
 
-        svg {
+        md-icon, svg {
             width: 25px;
             height: 25px;
         }
@@ -362,6 +362,7 @@ md-menu-item {
     }
 
     .comments-wrapper {
+        left: 0;
         color: @textColorWhite;
     }
 
