--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -8,7 +8,7 @@
 <div class="page-head">
     <div layout="row" layout-align="start start" ng-hide="b.settingsOpen" class="page-title box-title" ng-class="{'need-follow' : b.needFollow}">
         <h1 class="multi-line-ellipsis limit-two">{{b.data.name}}</h1>
-        <button ng-if="b.needFollow" type="button" ng-click="b.follow()" class="notificationButton text-capitalize" ga-track-event="['box', 'follow']">@BoxResources.Follow</button>
+        <button ng-if="b.needFollow" type="button" ng-click="b.follow()" class="notificationButton text-capitalize" ga-track-event="['box', 'follow']">@BoxResources.JoinClass</button>
         @*<button class="box-settings" flex="none" ng-if="!b.needFollow" type="button" ng-click="b.toggleSettings()" ga-track-event="['box', 'settings']">@Html.Svg("/images/site/icons.svg", "ThreeDots")</button>*@
     </div>
 </div>
