--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -838,6 +838,7 @@ md-input-container:not(.md-input-invalid).md-input-focused label {
     .justifyContet(center);
     .align-items(center);
     z-index: 90;
+    stroke:#3f51b5;
 }
 
 
