--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -489,6 +489,10 @@ md-menu-item {
                 margin-left: 35px;
                 padding: 0;
                 line-height: 28px;
+
+                &[disabled]{
+                    color: @textColorGrey;
+                }
             }
         }
 
