--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.css
@@ -33,7 +33,8 @@
   position: absolute;
   right: 0;
   top: 0;
-  padding: 0 10px 0 6px;
+  padding: 0;
+  margin: 10px 10px 0 6px;
 }
 .quizPage header .close svg {
   fill: #888b8e;
