--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -29,7 +29,8 @@
             position: absolute;
             right: 0;
             top: 0;
-            padding: 0 10px 0 6px;
+            padding: 0;
+            margin: 10px 10px 0 6px;
 
             svg {
                 fill: @textColorGrey;
