--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.css
@@ -158,7 +158,7 @@
   padding: 15px;
 }
 .quiz-create .form-control {
-  color: #ffffff;
+  color: #212325;
   background-color: #dadada;
   border-radius: 0;
   margin-bottom: 20px;
