--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quizCreate.less
@@ -176,7 +176,7 @@
 
 
     .form-control {
-        color: @textColorWhite;
+        color: @textColorBlack;
         background-color: @backgroundColor;
         border-radius: 0;
         margin-bottom: 20px;
