--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.rtl.css
@@ -33,7 +33,8 @@
   position: absolute;
   left: 0;
   top: 0;
-  padding: 0 6px 0 10px;
+  padding: 0;
+  margin: 10px 6px 0 10px;
 }
 .quizPage header .close svg {
   fill: #888b8e;
