--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Members2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Members2.cshtml
@@ -2,7 +2,7 @@
 <div layout="row" layout-padding class="members">
     <div flex-gt-md="25" flex-md="33" flex-sm="50" hide-xs ng-if="b.canInvite">
 
-        <button type="button" ng-click="b.inviteToBox()" class="inviteBtn box-style action" ng-class="{'active' :d.inviteOpen}" ga-track-event="['box-members', 'inviteFriends']">
+        <button type="button" ng-click="b.inviteToBox()" class="inviteBtn box-style action" ng-class="{'active' :b.inviteOpen}" ga-track-event="['box-members', 'inviteFriends']">
             <div class="wrapper">
                 <md-icon md-svg-icon="t:invite" class="icon"></md-icon>
                 @*@Html.Svg("~/images/site/icons.svg", "invite")*@
