--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -558,6 +558,7 @@
 
         .user-name, .reply .user-name {
             color: @textColorBlack;
+            padding-right: 25px;
         }
 
         .user-name {
