--- a/Zbang.Cloudents.Mvc4WebRole/Views/Chat/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Chat/Index.cshtml
@@ -24,7 +24,7 @@
                             <md-icon md-svg-icon="t:close" class="resetIcon"></md-icon>
                         </button>
                     </form>
-                    <div class="users-list scrollbar" sb-scroll ng-scrollbars ng-scrollbars-paging ng-scrollbars-paging-function="cu.usersPaging" ng-scrollbars-config="c.scrollSetting" ng-scrollbars-update="c.updateScrollbar" srph-infinite-scroll="cu.usersPaging()" container="true">
+                    <div class="users-list scrollbar" sb-scroll ng-scrollbars ng-scrollbars-paging ng-scrollbars-paging-function="cu.usersPaging" ng-scrollbars-config="c.scrollSetting" ng-scrollbars-update="c.updateScrollbar2" srph-infinite-scroll="cu.usersPaging()" container="true">
                         <section class="favorits" ng-show="favorits.length">
                             <div class="header">
                                 <md-icon md-svg-icon="t:star"></md-icon>
